// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel-plugin-annotate-ng Class ExportDefaultDeclaration 1`] = `
"MonitorController.$inject = [\\"$q\\", \\"$sce\\", \\"$animate\\"];
export default class MonitorController {
  constructor($q, $sce, $animate) {
    this.$q = $q;
    this.$sce = $sce;
    this.$animate = $animate;
  }

  ngOnInit() {}

  ngAfterViewInit() {}

  ngOnDestroy() {}
}"
`;

exports[`babel-plugin-annotate-ng Class ExportNamedDeclaration 1`] = `
"ReduxCoreController.$inject = [\\"$q\\", \\"$sce\\", \\"$animate\\"];
export class ReduxCoreController {
  constructor($q, $sce, $animate) {
    this.$q = $q;
    this.$sce = $sce;
    this.$animate = $animate;
  }

  ngOnInit() {}

  ngAfterViewInit() {}

  ngOnDestroy() {}
}"
`;

exports[`babel-plugin-annotate-ng Cross Class Declare ExportDefaultDeclare 1`] = `
"MonitorCrossController.$inject = [\\"$q\\", \\"$sce\\", \\"$animate\\"];
export default class MonitorCrossController {
  constructor($q, $sce, $animate) {
    this.$q = $q;
    this.$sce = $sce;
    this.$animate = $animate;
  }

  ngOnInit() {}

  ngAfterViewInit() {}

  ngOnDestroy() {}
}"
`;

exports[`babel-plugin-annotate-ng Cross Class Declare ExportNamedDeclare 1`] = `
"ReduxCrossController.$inject = [\\"$q\\", \\"$sce\\", \\"$animate\\"];
export class ReduxCrossController {
  constructor($q, $sce, $animate) {
    this.$q = $q;
    this.$sce = $sce;
    this.$animate = $animate;
  }

  ngOnInit() {}

  ngAfterViewInit() {}

  ngOnDestroy() {}
}"
`;

exports[`babel-plugin-annotate-ng Inline Class ExportDefaultDeclaration 1`] = `
"MonitorInlineController.$inject = [\\"$q\\", \\"$sce\\", \\"$animate\\"];
export default class MonitorInlineController {
  constructor($q, $sce, $animate) {
    this.$q = $q;
    this.$sce = $sce;
    this.$animate = $animate;
  }

  ngOnInit() {}

  ngAfterViewInit() {}

  ngOnDestroy() {}
}"
`;

exports[`babel-plugin-annotate-ng Inline Class ExportNamedDeclaration 1`] = `
"ReduxCoreController.$inject = [\\"$q\\", \\"$sce\\", \\"$animate\\"];
export class ReduxCoreController {
  constructor($q, $sce, $animate) {
    this.$q = $q;
    this.$sce = $sce;
    this.$animate = $animate;
  }

  ngOnInit() {}

  ngAfterViewInit() {}

  ngOnDestroy() {}
}"
`;
